# chess-ai-tool

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_chat.py
chess_project/: chess_script.py  main.py
chessbuddy/: README.md  pyproject.toml
chessbuddy/src/komodo/chessbuddy/: __init__.py  main.py
chessbuddy/src/komodo/chessbuddy/config/: env.py  logging.py
chessbuddy/src/komodo/chessbuddy/docs/: Chess.com Analysis Project.txt  Core Components Design Plan.txt  chess_buddy_reference.txt
chessbuddy/src/komodo/chessbuddy/lib/: chesscom.py  pgnanalytics.py  welcome.py
chessbuddy/src/komodo/chessbuddy/router/: routes.py
chessbuddy/src/komodo/chessbuddy/scripts/: format_with_openai.py  mcp_chat_utils.py  mcp_client.py  mcp_client_single.py
chessbuddy/src/komodo/chessbuddy/servers/: fastapi_server.py  mcp_server.py
chessbuddy/src/komodo/chessbuddy/services/: config.py  modal_chess_buddy.py
chessbuddy/src/komodo/chessbuddy/tests/: test_chesscom.py
