[project]
name = "thechessbuddy"
version = "0.1.0"
description = "Chess buddy is an AI agent that can help you get better at chess."
requires-python = ">=3.13"
dependencies = [
    "modal>=0.74.29",
    "openai>=1.76.0",
    "smolagents[mcp]>=1.14.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "chess-com>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["komodo"]

[tool.uv.workspace]
members = [
    "chessbuddy",
]
