[project]
name = "chessbuddy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.2.0",
  "mcp>=1.6.0",
]

[tool.uv.dependencies]
boto3=">=1.37.1"
dotenv=">=0.9.9"
loguru=">=0.7.3"

[project.scripts]
chessbuddy = "komodo.chessbuddy:main"
chessbuddy_mcp_client = "komodo.chessbuddy.scripts.mcp_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/komodo"]
